# web/public/openapi.yaml
@@ -49,7 +49,6 @@ tags:
   - name: Direct messages
   - name: Search
   - name: Social
-  - name: Notes
   - name: OAuth clients
   - name: Personal access tokens
   - name: Custom emojis
@@ -509,25 +508,6 @@ paths:
       tags:
         - Public optional
       summary: Replies by handle
-      security:
-        - {}
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /users/by-handle/{handle}/notes:
-    get:
-      tags:
-        - Public optional
-      summary: Notes list by handle
       security:
         - {}
         - bearerAuth: []
@@ -2169,76 +2149,6 @@ paths:
       tags:
         - Account
       summary: Patch profile
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /notes:
-    post:
-      tags:
-        - Notes
-      summary: Create note
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-  /notes/{noteID}:
-    get:
-      tags:
-        - Notes
-      summary: Get note
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-    patch:
-      tags:
-        - Notes
-      summary: Patch note
-      security:
-        - bearerAuth: []
-      responses:
-        '200':
-          description: Success (or streaming body for SSE)
-        '401':
-          description: Unauthorized
-        '403':
-          description: Forbidden
-        '404':
-          description: Not found
-        '429':
-          description: Too many requests
-    delete:
-      tags:
-        - Notes
-      summary: Delete note
       security:
         - bearerAuth: []
       responses:
